apps/network-test/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  labels:
    app: app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:v1.10
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  labels:
    app: app-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-v2
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
      - name: whoami
        image: hashicorp/http-echo:latest
        ports:
        - containerPort: 80
