apps/network-test/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app-v1

---
apiVersion: v1
kind: Service
metadata:
  name: app-v2-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app-v2
